<resources>
    <string name="app_name">appMoviBus</string>
    <string name="button_tcp">Enviar(TCP)</string>
    <string name="button_udp">Enviar(UDP)</string>
    <string name="detener">Detener</string>
    <string name="enviando_TCP">Enviando TCP...final</string>
    <string name="enviando_UDP">Enviando UDP...final</string>
    <string name="latitud">Latitud: </string>
    <string name="longitud">Longitud: </string>
    <string name="altitud">Altitud: </string>
    <string name="velocidad">Velocidad: </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_enviar_tcp">EnviarTCPActivity</string>
    <string name="title_activity_enviar_udp">EnviarUDPActivity</string>
</resources>
